@@ -2,7 +2,7 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.4 ]---------------
 
-2005-08-05  Erik Grinaker <erikg@codepoet.no>
+2005-08-06  Erik Grinaker <erikg@codepoet.no>
 
 	* moved unique dialog system to dialog module
 
@@ -10,7 +10,9 @@ Revelation changelog
 
 	* properly quote autoconf macro names
 
-2005-08-04  Erik Grinaker <erikg@codepoet.no>
+	* use pyexecdir instead of pythondir in applet
+
+2005-08-05  Erik Grinaker <erikg@codepoet.no>
 
 	* the UIManager wrapper now respects is-important attributes
 
